--- a/blog/templates/blog/Home.html
+++ b/blog/templates/blog/Home.html
@@ -139,6 +139,19 @@
 				<a href=""><img src="/blog/templates/wallpaper/wallpaper_app_1080p_021.png"
 								alt="Wallpaper 1" style="width:100%;height:100%;min-width:50%;min-height:50%"></a>
 			</div>
+			<div class="card">
+				<a href=""><img src="/blog/templates/wallpaper/wallpaper_app_1080p_001.png"
+								alt="Wallpaper 1" style="width:100%;height:100%;min-width:50%;min-height:50%"></a>
+			</div><div class="card">
+				<a href=""><img src="/blog/templates/wallpaper/wallpaper_app_1080p_002.png"
+								alt="Wallpaper 1" style="width:100%;height:100%;min-width:50%;min-height:50%"></a>
+			</div><div class="card">
+				<a href=""><img src="/blog/templates/wallpaper/wallpaper_app_1080p_008.png"
+								alt="Wallpaper 1" style="width:100%;height:100%;min-width:50%;min-height:50%"></a>
+			</div><div class="card">
+				<a href=""><img src="/blog/templates/wallpaper/wallpaper_app_1080p_022.png"
+								alt="Wallpaper 1" style="width:100%;height:100%;min-width:50%;min-height:50%"></a>
+			</div>
 		</div>
 	</div>
 </body>
